# gpu-accelerated-smr

./: .gitignore  CMakeLists.txt  README.md
benchmarking/: benchmark.cpp
config/: cloudlab.conf
experiments/: CMakeLists.txt  buf_sz.sh  matrix_size.sh  num_nodes.sh  num_state_mat.sh  smr.cc
include/: DenseMat.h  DenseVec.h  cfg.h  concepts.h  cpu_smr_engine  dag.cpp  dag.h  driver.cpp  driver_cpu.cpp  driver_hybrid.cpp  dummy_log.cpp  gpu.cu  gpu.cuh  logging.h  scheduler.h  smr_engine  state.h  util.h  workload.h
include/cpu/: cpu.cpp  cpu.h  cpu_matrix_ops.cpp  cpu_matrix_ops.h  cpu_matrix_ops_seq.h
include/kernels/: common.cuh  matrix_ops.cu  matrix_ops.h
include/mu/: crash-consensus.h  mu_impl.h
include/romulus/: cfg.h  cli.h  common.h  config.h  connection_manager.h  device.h  directory.h  logging.h  memblock.h  qp_pol.h  rc.h  registry.h  romulus.h  stats.h  util.h
lib/: memcached
logs/: log_0.txt  log_1.txt  log_2.txt  log_3.txt
mu/: Dockerfile  Makefile  cl.config  cl.sh  clang-output.txt  gcc-output.txt  notes.txt  output.txt  transfer.sh
mu/build-scripts/: clang-debug.sh  clang-release.sh  gcc-debug.sh  gcc-release.sh
mu/conan/exports/compiler-options/: compileroptions.py
mu/conan/profiles/: clang-debug.profile  clang-release.profile
mu/conn/src/: exchanger.cpp
mu/crash-consensus/: conanfile.py
mu/crash-consensus/demo/src/: main-st-lat.cpp  main-st.cpp
mu/crash-consensus/demo/using_conan_fully/: build.sh
mu/crash-consensus/experiments/deploy/: generate_exports.py
mu/crash-consensus/libgen/: export.sh
mu/crash-consensus/libgen/src/: CMakeLists.txt
mu/crash-consensus/src/: all_code.txt  consensus.cpp  external.h  leader-switch.hpp  pinning.cpp
mu/ctrl/src/: block.cpp  device.cpp
mu/demo/src/: main.cpp
mu/logs/: log_0.txt  log_1.txt  log_2.txt  log_3.txt  log_4.txt  log_5.txt  log_6.txt  log_7.txt  log_8.txt  log_9.txt
mu/memstore/src/: store.cpp
mu/shared/src/: CMakeLists.txt
plots/: make_plots.py
results/: buf_sz.csv  matrix_sz.csv  num_state_mat.csv
src/: CMakeLists.txt  smr.cc
tools/: all_logs.txt  all_results.txt  build.sh  cl.sh  commit.sh  diff.txt  mu.sh  perf.data  perf_annotate.txt
